v1.7 -Java 25 features and optimizations - New mc 26.1 args added