@@ -1,6 +1,6 @@
 /*
     A simple minecraft launcher.
-    Copyright (C) 2025 _1ms
+    Copyright (C) 2025-2026 _1ms
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -26,17 +26,17 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 import java.util.UUID;
 import java.util.jar.JarFile;
 
 //.jar libs in libraries folder, .dlls in natives folder from bin, mc.jar next to the launcher., assets in assets folder, assetIndex is the num: assets\indexes\[num].json
 
 public class Main {
-    public static void main(String[] args) throws IOException, InterruptedException {
+
+    void main(String[] args) throws IOException, InterruptedException {
         var ind = getIndex();
         var ver = getVersion();
-        System.out.println("Loading MC "+ getVersion() + " with assetIndex "+ getIndex() + "...");
+        System.out.println("Loading MC "+ ver + " with assetIndex "+ ind + "...");
 
         String currentDir = System.getProperty("user.dir");
         String sep = File.separator;
@@ -48,35 +48,24 @@ public class Main {
         String launcherBrand = "SML";
         String uname = args.length>0 ? args[0] : null;
 
-        List<String> baseArgs = new ArrayList<>(Arrays.asList(
+        var baseArgs = new ArrayList<>(Arrays.asList(
                 javaBin,
-                "-Xms1024M",
-                "-Xmx4096M",
+                "-Xms2G",
+                "-Xmx4G",
+                "--sun-misc-unsafe-memory-access=allow",
+                "--enable-native-access=ALL-UNNAMED",
                 "-Djava.library.path=" + nativesPath,
                 "-Djna.tmpdir=" + nativesPath,
                 "-Dorg.lwjgl.system.SharedLibraryExtractPath=" + nativesPath,
                 "-Dio.netty.native.workdir=" + nativesPath,
                 "-cp", classPath,
-                "-XX:+UnlockExperimentalVMOptions", "-XX:+UseG1GC",
-                "-XX:G1NewSizePercent=20", "-XX:G1ReservePercent=20",
-                "-XX:MaxGCPauseMillis=50", "-XX:G1HeapRegionSize=32M",
+                "-XX:+UseCompactObjectHeaders", "-XX:+AlwaysPreTouch",
+                "-XX:+UseStringDeduplication", "-XX:+UseZGC",
                 "-Dminecraft.launcher.brand=" + launcherBrand,
-                "-Dminecraft.launcher.version=1.5",
+                "-Dminecraft.launcher.version=1.7",
                 "-XX:HeapDumpPath=MojangTricksIntelDriversForPerformance_javaw.exe_minecraft.exe.heapdump",
                 "-Xss1M",
-                "net.minecraft.client.main.Main"
-        ));
-
-        // 2) Conditionally insert the username args
-        if (uname != null) {
-            // insert right after the main class name
-            int insertIndex = baseArgs.indexOf("net.minecraft.client.main.Main") + 1;
-            baseArgs.add(insertIndex, uname);
-            baseArgs.add(insertIndex, "--username");
-        }
-
-        // 3) Add the remaining constant suffix
-        baseArgs.addAll(Arrays.asList(
+                "net.minecraft.client.main.Main",
                 "--uuid", UUID.randomUUID().toString(),
                 "--clientId", launcherBrand,
                 "--xuid", launcherBrand,
@@ -88,26 +77,29 @@ public class Main {
                 "--accessToken", launcherBrand
         ));
 
+        if (uname!=null) {
+            baseArgs.add("--username");
+            baseArgs.add(uname);
+        }
+
         // single ProcessBuilder invocation
         new ProcessBuilder(baseArgs).inheritIO().start().waitFor();
     }
 
-    static String getIndex() throws IOException {
-        try (var stream = Files.newDirectoryStream(Path.of("assets","indexes"), "*.json")) {
-            for (Path p : stream) {
-                var fname = p.getFileName().toString();
-                return fname.substring(0, fname.length() - 5); // Remove ".json"
-            }
-        }
-        return null;
-    }
-
-    static String getVersion() throws IOException {
-        try (JarFile jar = new JarFile("mc.jar");
-             BufferedReader reader = new BufferedReader(new InputStreamReader(
+    String getVersion() throws IOException {
+        try (var jar = new JarFile("mc.jar");
+             var reader = new BufferedReader(new InputStreamReader(
                      jar.getInputStream(jar.getEntry("version.json"))))) {
             reader.readLine(); // skip first line "{"
-            return reader.readLine().split("\"")[3]; // extracts "1.21.11"
+            return reader.readLine().split("\"")[3]; // extracts version, like "1.21.11"
         }
     }
+
+    String getIndex() throws IOException {
+        try (var stream = Files.newDirectoryStream(Path.of("assets","indexes"))) {
+            var s = stream.iterator().next().getFileName().toString();
+            return s.substring(0, s.length()-5);
+        }
+    }
+
 }
